Fix the aligning of the submenus in the project tabs.
svn path=/xm.theme/trunk/; revision=58709

--- a/xm/theme/browser/stylesheets/main.css
+++ b/xm/theme/browser/stylesheets/main.css
@@ -72,6 +72,10 @@ h1#project-header a {
   color: #436976;
 }
 
+#project-globalnav .actionMenu .actionMenuContent {
+  right: auto;
+}
+
 #my-projects-menu .project-submenu ul,
 #project-globalnav .project-submenu ul {
   background-color: #DEE7EC;
